<resources>
    <string name="facebook_app_id">283433129572777</string>
    <string name="fb_login_protocol_scheme">fb283433129572777</string>
    <string name="id_web_token">705955618285-45ssda7l8q688fkgliq9mnfc95v6jndt.apps.googleusercontent.com</string>
    <string name="app_name">Lit</string>
    <string name="email">Email</string>
    <string name="pass">Pass</string>
    <string name="confirm_pass">Confirm pass</string>
    <string name="register">Đăng ký</string>
    <string name="register_success">Đăng ký thành công !!</string>
    <string name="login_success">Đăng nhập thành công!!</string>
    <string name="wrong_pass">Mật khẩu của bạn không đúng, vui lòng thử lại sau</string>
    <string name="not_equals_pass">Mật khẩu không trùng khớp, vui lòng thử lại</string>
    <string name="account_exits">Tài khoản đã tồn tại, vui lòng đăng ký bằng tài khoản khác</string>
    <string name="lack_of_information">Vui lòng nhập đầy đủ thông tin và thử lại sau.</string>
    <string name="login_by">Đăng nhập bằng</string>
    <string name="login">Đăng nhập</string>
    <string name="new_user">Bạn là người mới, đăng ký ngay !!</string>
    <string name="already_account">Bạn đã có\n tài khoản chưa?</string>
    <string name="forgot_pass">Bạn quên mật khẩu?</string>
    <string name="email_address">Địa chỉ email</string>
    <string name="request">Yêu cầu</string>
    <string name="return_home">Quay lại</string>
    <string name="check_email">Mật khẩu mới sẽ được gửi vào email của bạn!!!</string>
    <string name="error">Có lối sảy ra, vui lòng thử lại sau.</string>
    <string name="wrong_info">Sai thông tin đăng nhập, vui lòng thử lại !!</string>
    <string name="friend">Bạn bè̉</string>
    <string name="news">Bản tin</string>
    <string name="conversation">Trò chuyện</string>
    <string name="me">Tôi</string>
    <string name="back">Back</string>
    <string name="apply">Apply</string>
    <string name="click_to_record">Nhấn để ghi âm</string>
    <string name="what_do_you_think">Bạn đang nghĩ gì</string>
    <string name="share">Chia sẻ</string>
    <string name="upload_status_success">Chia sẻ status thành công.</string>
    <string name="download_image_success">Tải hình ảnh thành công.</string>
    <string name="just_finished">Vừa xong</string>
    <string name="minute">phút trước</string>
    <string name="our">giờ trước</string>
    <string name="day">ngày trước</string>
    <string name="voice">Giọng nói</string>
    <string name="image">Hình ảnh</string>
    <string name="video">Video</string>
    <string name="following">Đang theo dõi</string>
    <string name="count_follow">Lượt theo dõi</string>
    <string name="visited">Đã ghé thăm</string>
    <string name="add_tag">Thêm thẻ tag +</string>
    <string name="gift">Quà tặng</string>
    <string name="setting">Cài đặt</string>
    <string name="update_profile">CẬP NHẬT THÔNG TIN</string>
    <string name="full_name">Họ tên</string>
    <string name="story">Tiểu sử</string>
    <string name="year_of_birth">Năm sinh</string>
    <string name="Aa">Aa</string>
    <string name="gender">Giới tính</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="update">Cập nhật</string>
    <string name="newbie">Người mới</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="she_is_newbie">Cô ấy, là người mới 😀😀</string>
    <string name="he_is_newbie">Anh ấy, là người mới 😀</string>
    <string name="not_null_information">Không được để trống thông tin, vui lòng thử lại sau.</string>
    <string name="welcome">Chào mừng bạn đến với LitMatch !! </string>
    <string name="write_message">Soạn tin nhắn</string>
    <string name="send">Gửi</string>
    <string name="fill_information">Fill the information</string>
    <string name="date_of_birth">Ngày sinh</string>
    <string name="finish">Hoàn thành</string>
    <string name="cancel">Hủy</string>
    <string name="birthday">Birthday</string>
    <string name="can_not_change_when_confirm_gender">Không thể thay đổi sau khi xác định\ngiới tính</string>
    <string name="latest">Muộn nhất</string>
    <string name="suggestions">Gợi ý</string>
    <string name="notification">Thông báo</string>
    <string name="all_photo">Tất cả ảnh</string>
    <string name="max_night_photo_notify">Bạn chỉ được gửi tối đa 9 hình ảnh !!</string>
    <string name="to">đến</string>
    <string name="you_have_message">(bạn có tin nhắn mới)</string>
    <string name="call_sound">Gọi âm thanh</string>
    <string name="call_video">Gọi điện video</string>
    <string name="waiting_answer">Đang chờ người khác trả lời</string>
    <string name="click_to_call">Bấm để gọi.</string>
    <string name="call_from_lit_match">Cuộc gọi từ LitMatch</string>
    <string name="call_from">Cuộc gọi từ</string>
    <string name="deject">Từ chối</string>
    <string name="ok">Đồng ý</string>
    <string name="collecting">Đang kết nối</string>
    <string name="audio_invitations">Lời mời gọi âm thanh</string>
    <string name="click_to_return_call">Nhấn để quay trở lại cuộc gọi</string>
</resources>