<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabNews"
            style="@style/TabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="scrollable">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabLatest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latest" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabSuggestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suggestions" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabFollow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following" />
        </com.google.android.material.tabs.TabLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pagerNews"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>