<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lbl_fill"
            style="@style/TextView.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_1x"
            android:text="@string/fill_information"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edtName"
            style="@style/EditText.Regular"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_9x"
            android:background="@drawable/bn_radius_circle_grey"
            android:hint="@string/full_name"
            android:padding="@dimen/dimen_2x"
            app:layout_constraintLeft_toLeftOf="@id/line_vertical_1"
            app:layout_constraintRight_toRightOf="@id/line_vertical_2"
            app:layout_constraintTop_toBottomOf="@id/lbl_fill"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edtDateOfBirth"
            style="@style/EditText.Regular"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_2x"
            android:background="@drawable/bn_radius_circle_grey"
            android:drawableRight="@drawable/ic_date_grey"
            android:focusable="false"
            android:hint="@string/date_of_birth"
            android:padding="@dimen/dimen_2x"
            app:layout_constraintLeft_toLeftOf="@id/line_vertical_1"
            app:layout_constraintRight_toRightOf="@id/line_vertical_2"
            app:layout_constraintTop_toBottomOf="@id/edtName"
            tools:ignore="MissingConstraints" />

        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5x"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtDateOfBirth"
            tools:ignore="MissingConstraints">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="@dimen/dimen_130"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dimen_1x"
                android:background="@drawable/btn_radius_circle_blue"
                android:button="@android:color/transparent"
                android:drawableLeft="@drawable/btn_radio_male"
                android:drawablePadding="@dimen/dimen_1x"
                android:paddingLeft="@dimen/dimen_2x"
                android:paddingTop="@dimen/dimen_1x"
                android:paddingEnd="@dimen/dimen_x5x"
                android:paddingRight="@dimen/dimen_3x"
                android:paddingBottom="@dimen/dimen_1x"
                android:text="@string/male"
                android:textColor="@color/btn_white_grey" />

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="@dimen/dimen_130"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_1x"
                android:layout_weight="0"
                android:background="@drawable/btn_radius_circle_pink"
                android:button="@android:color/transparent"
                android:drawableLeft="@drawable/btn_radio_female"
                android:drawablePadding="@dimen/dimen_1x"
                android:paddingLeft="@dimen/dimen_2x"
                android:paddingTop="@dimen/dimen_1x"
                android:paddingEnd="@dimen/dimen_x5x"
                android:paddingRight="@dimen/dimen_3x"
                android:paddingBottom="@dimen/dimen_1x"
                android:text="@string/female"
                android:textColor="@color/btn_white_grey" />
        </RadioGroup>

        <TextView
            android:id="@+id/lbl_notify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_7x"
            android:gravity="center_horizontal"
            android:text="@string/can_not_change_when_confirm_gender"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rgGender"
            tools:ignore="MissingConstraints" />

        <TextView
            android:textAllCaps="false"
            android:id="@+id/btnFinish"
            style="@style/Button"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_3x"
            android:layout_marginTop="@dimen/dimen_5x"
            android:layout_marginRight="@dimen/dimen_3x"
            android:background="@drawable/btn_radius_circle_purple"
            android:text="@string/finish"
            app:layout_constraintLeft_toRightOf="@id/line_vertical_1"
            app:layout_constraintRight_toRightOf="@id/line_vertical_2"
            app:layout_constraintTop_toBottomOf="@id/lbl_notify"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_vertical_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_vertical_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_percent="0.15"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_vertical_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_percent="0.85"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>
