<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_option"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:background="@color/white247"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_2x"
        android:weightSum="3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/lblCancel"
            style="@style/TextView.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/purple"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            style="@style/TextView.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/birthday"
            android:textColor="@color/greyBold"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintLeft_toLeftOf="@id/lblCancel"
            app:layout_constraintRight_toRightOf="@id/lblFinish"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/lblFinish"
            style="@style/TextView.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_2x"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/finish"
            android:textColor="@color/purple"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layoutPickDate"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_2x"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_option"
        tools:ignore="MissingConstraints">

        <NumberPicker
            android:id="@+id/nbYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="MissingConstraints" />

        <NumberPicker
            android:id="@+id/nbMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="MissingConstraints" />

        <NumberPicker
            android:id="@+id/nbDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="MissingConstraints" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>